# jupyter_notebooks

./: .RData  .Rhistory  .gitignore  .kernel-98582319-e496-4563-9ca4-eddacf199452.json  Building_Python3_From_Source.txt  Building_Python3_PyData_Stack.txt  Linux_Building_Python3_From_Source.txt  MyFirstIPython3Notebook.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Upgrading_R_Ubuntu.txt  bookmarks.txt  ipython_notebook_config.py  ipython_notebook_setup.txt  jupyter_notebook_config.py  jupyter_notebook_extensions_installation.txt  jupyter_notebook_setup.txt  p4wn4g3.ipynb  useful_packages.txt
.ipynb_checkpoints/: p4wn4g3-checkpoint.ipynb
1_throwaway/: Untitled.ipynb
PyData/: UsefulPackages.txt  bookmarks.txt
PyStitch/: Model_XXX.xlsx  modelx_washer_tank.html  modelx_washer_tank.md
R/: Forecast_From_Excel_Data.ipynb  Installing_IRkernel_Linux.txt  Installing_IRkernel_Windows.txt  Installing_Or_Upgrading_R_Ubuntu.txt  Installing_R_Windows.txt  R_Cheatsheet.txt  State_Choropleth_Example.ipynb  Using_forecast_package.ipynb  choroplethr.ipynb  devtools.txt  must_have_packages.txt  wordcloud.ipynb  yearmon_to_date.ipynb
R_Vis/: Getting_Yen_Values.ipynb
Toyplot/: Toyplot_Examples.ipynb
adventofcode2018/: Day1.ipynb  Day1Part2.py  Day2.ipynb  Day2Part1.py
affinity_group/: meeting_notes_20150319.txt
altair/: Altair_Examples.ipynb  Altiar_Report.ipynb  Choropleth_Examples.ipynb  Defect_Rates.ipynb  Examples.ipynb  KOHSIDNE4_weather_cleaned.csv  (+2 more)
beakerx/: Untitled.ipynb
bls_gov/src/: pyproject.toml
bls_gov/src/blsutils/: __init__.py  bls.py
dash/: app.py  (+3 more)
(+1293 files in other folders)
